add more integration tests, new swagger docs and initialization db
